libnm-core/nm-setting-wired.c
@@ -701,12 +701,12 @@ verify (NMSetting *setting, NMConnection *connection, GError **error)
 		return FALSE;
 	}
 
-	if (   NM_FLAGS_HAS (priv->wol, NM_SETTING_WIRED_WAKE_ON_LAN_DEFAULT)
-	    && NM_FLAGS_ANY (priv->wol, NM_SETTING_WIRED_WAKE_ON_LAN_ALL)) {
+	if (   NM_FLAGS_ANY (priv->wol, NM_SETTING_WIRED_WAKE_ON_LAN_EXCLUSIVE_FLAGS)
+	    && !nm_utils_is_power_of_two (priv->wol)) {
 		g_set_error_literal (error,
 		                     NM_CONNECTION_ERROR,
 		                     NM_CONNECTION_ERROR_INVALID_PROPERTY,
-		                     _("Wake-on-LAN mode 'default' is incompatible with other flags"));
+		                     _("Wake-on-LAN mode 'default' and 'ignore' are exclusive flags"));
 		g_prefix_error (error, "%s.%s: ", NM_SETTING_WIRED_SETTING_NAME, NM_SETTING_WIRED_WAKE_ON_LAN);
 		return FALSE;
 	}
@@ -1195,7 +1195,10 @@ nm_setting_wired_class_init (NMSettingWiredClass *setting_class)
 	 * May be any combination of %NM_SETTING_WIRED_WAKE_ON_LAN_PHY,
 	 * %NM_SETTING_WIRED_WAKE_ON_LAN_UNICAST, %NM_SETTING_WIRED_WAKE_ON_LAN_MULTICAST,
 	 * %NM_SETTING_WIRED_WAKE_ON_LAN_BROADCAST, %NM_SETTING_WIRED_WAKE_ON_LAN_ARP,
-	 * %NM_SETTING_WIRED_WAKE_ON_LAN_MAGIC.
+	 * %NM_SETTING_WIRED_WAKE_ON_LAN_MAGIC or the special values
+	 * %NM_SETTING_WIRED_WAKE_ON_LAN_DEFAULT (to use global settings) and
+	 * %NM_SETTING_WIRED_WAKE_ON_LAN_IGNORE (to disable management of Wake-on-LAN in
+	 * NetworkManager).
 	 *
 	 * Since: 1.2
 	 **/
